--- a/conf.d/default.conf
+++ b/conf.d/default.conf
@@ -1,6 +1,6 @@
 server {
 	listen 80;
-	server_name _;
+	   server_name _;
 	root /public_html;
 
 	location / {
@@ -10,7 +10,7 @@ server {
 	# PHP Conf
 	location ~* \.php$ {
 		fascgi_pass	php:9000;
-		fastcgi_index	index01.php;
+		fastcgi_index	index.php;
 		include		fastcgi_params;
 		fastcgi_param	SCRIPT_FILENAME $document_root$fastcgi_script_name;
 		fastcgi_param	PATH_INFO $fastcgi_path_info;
